--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ichg4354/instaclone-backend#readme",
   "dependencies": {
+    "@prisma/client": "^2.28.0",
     "apollo-server": "^3.0.2",
     "graphql": "^15.5.1",
     "nodemon": "^2.0.12"
