--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node server.js",
-    "migrate": "npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "studio": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "@prisma/client": "^2.28.0",
     "apollo-server": "^3.0.2",
     "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.2",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
